--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,10 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "numba 0.61.0 requires numpy<2.2,>=1.24, but you have numpy 2.2.4 which is incompatible.\n",
+      "streamlit 1.28.0 requires numpy<2,>=1.19.3, but you have numpy 2.2.4 which is incompatible.\n",
+      "streamlit 1.28.0 requires protobuf<5,>=3.20, but you have protobuf 5.29.4 which is incompatible.\n",
+      "tensorflow 2.19.0 requires numpy<2.2.0,>=1.26.0, but you have numpy 2.2.4 which is incompatible.\n",
+      "tensorflow-intel 2.18.0 requires ml-dtypes<0.5.0,>=0.4.0, but you have ml-dtypes 0.5.1 which is incompatible.\n",
+      "tensorflow-intel 2.18.0 requires numpy<2.1.0,>=1.26.0, but you have numpy 2.2.4 which is incompatible.\n",
+      "tensorflow-intel 2.18.0 requires tensorboard<2.19,>=2.18, but you have tensorboard 2.19.0 which is incompatible.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --upgrade --quiet langchain langchain-community"
    ]
@@ -60,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
     "import getpass\n",
     "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
    ]
   },
   {
@@ -89,10 +111,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
+   "id": "a6e8e9bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting langchain-ollama\n",
+      "  Downloading langchain_ollama-0.3.0-py3-none-any.whl.metadata (1.5 kB)\n",
+      "Collecting ollama<1,>=0.4.4 (from langchain-ollama)\n",
+      "  Downloading ollama-0.4.7-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Requirement already satisfied: langchain-core<1.0.0,>=0.3.47 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-ollama) (0.3.49)\n",
+      "Requirement already satisfied: langsmith<0.4,>=0.1.125 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.47->langchain-ollama) (0.3.19)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10.0.0,>=8.1.0 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.47->langchain-ollama) (8.5.0)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.47->langchain-ollama) (1.33)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.47->langchain-ollama) (6.0.2)\n",
+      "Requirement already satisfied: packaging<25,>=23.2 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.47->langchain-ollama) (23.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.7 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.47->langchain-ollama) (4.12.2)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.5.2 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.47->langchain-ollama) (2.10.6)\n",
+      "Requirement already satisfied: httpx<0.29,>=0.27 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from ollama<1,>=0.4.4->langchain-ollama) (0.28.1)\n",
+      "Requirement already satisfied: anyio in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (4.8.0)\n",
+      "Requirement already satisfied: certifi in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (2025.1.31)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (1.0.7)\n",
+      "Requirement already satisfied: idna in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (3.10)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httpcore==1.*->httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (0.14.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (3.0.0)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (3.10.15)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (2.32.3)\n",
+      "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (1.0.0)\n",
+      "Requirement already satisfied: zstandard<0.24.0,>=0.23.0 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (0.23.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic<3.0.0,>=2.5.2->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.27.2 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic<3.0.0,>=2.5.2->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (2.27.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3,>=2->langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (3.4.1)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3,>=2->langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.47->langchain-ollama) (2.3.0)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\kenneth\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from anyio->httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (1.3.1)\n",
+      "Downloading langchain_ollama-0.3.0-py3-none-any.whl (20 kB)\n",
+      "Downloading ollama-0.4.7-py3-none-any.whl (13 kB)\n",
+      "Installing collected packages: ollama, langchain-ollama\n",
+      "Successfully installed langchain-ollama-0.3.0 ollama-0.4.7\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install -U langchain-ollama\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kenneth\\AppData\\Local\\Temp\\ipykernel_9140\\1427064109.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  model = Ollama(model=\"phi3\")\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
@@ -111,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +249,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,12 +328,26 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "To calculate this using the provided tool:\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "  \"tool_response\": [\n",
+      "    {\n",
+      "      \"Tool Name\": \"add\",\n",
+      "      \"Arguments\": {\"x\": 3,\"y\": 1132}\n",
       "    }\n",
-      "}\n"
+      "  ]\n",
+      "}\n",
+      "```\n",
+      "And when you run this command, the result would be: `{\"result\": 1135}`\n"
      ]
     }
    ],
@@ -280,17 +375,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +483,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +514,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -449,11 +544,11 @@
      "data": {
       "text/plain": [
        "{'name': 'multiply',\n",
-       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
-       " 'output': 53.83784653}"
+       " 'arguments': {'x': 500, 'y': 4.14137281},\n",
+       " 'output': 2070.686405}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +559,7 @@
     "chain = (\n",
     "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
     ")\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+    "chain.invoke({\"input\": \"what's 500 times 4.14137281\"})"
    ]
   },
   {
@@ -487,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
